<resources>
    <string name="app_name">The Movie DB</string>
    <string name="title_welcome">Добро пожаловать!</string>
    <string name="title_login_hint">Укажите логин и пароль, которые вы использовали для входа</string>
    <string name="title_input_hint_login">Логин</string>
    <string name="title_input_hint_password">Пароль</string>
    <string name="title_sign_in">Войти</string>
    <string name="title_invalid_login_or_password_error">Неверный логин или пароль</string>
    <string name="title_some_error">Что-то пошло не так,\n попробуйте войти позже</string>
</resources>
